BulletファイルおよびStageファイルの更新

--- a/暗波HP.vcxproj
+++ b/暗波HP.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="Luminous.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Resources.cpp" />
     <ClCompile Include="Stage.cpp" />
   </ItemGroup>
   <ItemGroup>
